2005-09-13 Francois Proulx <francois.proulx@gmail.com>
	* Added bytes in words for online users
	
2005-09-13 Francois Proulx <francois.proulx@gmail.com>
	* Fixed bug in user stats
	
2005-09-13 Francois Proulx <francois.proulx@gmail.com>
	* Added access permissions for statistics.

2005-09-12 Benoit Grégoire  <bock@step.polymtl.ca>
	* schema_validate.php:  Fix a bug version 26.  The conversion of the old account_origin as a parameter 
	to the authenticator was wrong.  To fix it manually if you already ran the script,
	 you must quote the parameter in column network_authenticator_params in the networks table.
	* RssPressReview.php:  Make expansion of today's item optionnal.

2005-09-11 Francois Proulx <francois.proulx@gmail.com>
	* Fixed dependency check, found a workaround for the file_exists problem
	
2005-09-11 Francois Proulx <francois.proulx@gmail.com>
	* Added dependency check for Phlickr
	
2005-09-11 Francois Proulx <francois.proulx@gmail.com>
	* Fixed Flickr support
	* Now using PEAR version of Phlickr
	* Download the latest package and install like this : pear install PhlickrXYZ.tar.gz
	
2005-09-10 Francois Proulx <francois.proulx@gmail.com>
	* Fixed dependency check
	
2005-09-10 Francois Proulx <francois.proulx@gmail.com>
	* Removed many blank lines after php tags
	* added more checks, for dates etc...
	* changed sorting mode
	
2005-09-10 Benoit Grégoire  <bock@step.polymtl.ca>
	* Add UI to add a new Network
	* Improve UI to add a new Node and new Content

2005-09-10 Philippe April  <philippe@ilesansfil.org>
	* signup.php: Fixed bug in detecting is the user is already part of the
	network.
	* classes/{Authenticator,Network,Node}.php: isset, and issues preventing
	users from logging out.
	* add BASEPATH to most files with require_once
	* Added dependency checking class
	* Don't show the admin menu if user does not have access
	* Got rid of user_log_detailed.html, using stats.php instead

2005-09-10 Francois Proulx <francois.proulx@gmail.com>